--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="Akhil Goel logo">
         <div class="logo-top">
-          <img src="src/png/logo-name-re.png" alt="animation-head" id="nav-avatar" style="width: 100px; height: auto;"/>
+          <img src="src/png/Graphicon_wh.png" alt="animation-head" id="nav-avatar" style="width: 100px; height: auto;"/>
         </div>        
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
