--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMWDE0VTD3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -38,7 +39,7 @@
       <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="Akhil Goel logo">
         <div class="logo-top">
-          <img src="src/png/Graphicon_wh.png" alt="animation-head" id="nav-avatar" style="width: 100px; height: auto;"/>
+          <img src="src/png/logo-name-re.png" alt="animation-head" id="nav-avatar" style="width: 100px; height: auto;"/>
         </div>        
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
@@ -175,7 +176,7 @@
       
 
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
-          "Crafting Creative Solutions: Your Premier Graphicon io. <br />
+          "Crafting Creative Solutions: Your Premier Graphic Design io. <br />
           <br />
           Elevate Your Brand with Stunning Designs. Expertise, Innovation, and Collaboration Define Our Approach. Let's Transform Your Vision into Reality!".
         </p>
@@ -411,7 +412,7 @@
 
   <script>
     function openURL() {
-      var url = "./src/png/Business_card.png";
+      var url = "./src/png/card_orig.png";
 
       window.open(url, "_blank");
     }
@@ -419,7 +420,7 @@
 
   <script>
   function openURL() {
-    var url = "./src/png/Business_card.png";
+    var url = "./src/png/card_orig.png";
     window.open(url, "_blank");
   }
 </script>
