--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="./src/png/logo-name-re.png" alt="Akhil Goel" tabindex="0" aria-label="image of vinod" />
+            <img src="./src/png/logo-name-re.png" alt="Akhil Goel" tabindex="0" aria-label="image of Graphicon" />
           </div>
         </div>
       </div>
@@ -298,12 +298,12 @@
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/Graphicon_wh.png" alt="adobe illustrator skill" class="tech-stack-logo" />
+              <img src="./src/png/logo-name-re.png" alt="adobe illustrator skill" class="tech-stack-logo" />
               <span class="tooltip">Brand Identity</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/Graphicon_wh.png" alt="canva skill" class="tech-stack-logo" />
+              <img src="./src/png/logo-name-re.png" alt="canva skill" class="tech-stack-logo" />
               <span class="tooltip">Brand Consultation</span>
             </li>
           </ul>
@@ -325,7 +325,7 @@
           <div data-aos="fade-up" class="project-box-wrapper">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
-                <img src="src/png/Graphicon_wh.png" alt="pexelicon website favicon" class="faviconforProject" />
+                <img src="./src/png/logo-name-re.png" alt="pexelicon website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Graphicon Projects</article>
                 <p class="ProjectDescription">
                   Projects: You can visit to see Graphicon projects on this website.
