--- a/index.html
+++ b/index.html
@@ -391,15 +391,15 @@
                       <ul class="features">
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>5 Logo Designs</span>
+                              <span>Upto 5 Logo Designs</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>3 Social Media Graphics</span>
+                              <span>Upto 3 Social Media Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>2 Revisions</span>
+                              <span>Upto 2 Revisions</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
@@ -417,19 +417,19 @@
                       <ul class="features">
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>10 Logo Designs</span>
+                              <span>Upto 10 Logo Designs</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>10 Social Media Graphics</span>
+                              <span>Upto 10 Social Media Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>5 Website Graphics</span>
+                              <span>Upto 5 Website Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>5 Revisions</span>
+                              <span>Upto 5 Revisions</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
