--- a/index.html
+++ b/index.html
@@ -332,41 +332,10 @@
       <div class="projects-section-div">
         <div class="section-heading" data-aos="fade-up">
           <h2 class="section-heading-article" tabindex="0" aria-label="Select Plan Accordingly">
-            &#60;/Plans&#62;
+            &#60;/Prices&#62;
           </h2>
           <p class="sectionHeadingP"></p>
         </div>
-        <style>
-          .popup-container {
-              display: none;
-              position: fixed;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              background-color: #ffffff;
-              padding: 20px;
-              box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-              z-index: 9999;
-              width: 600px;
-              height: 400px;
-          }
-  
-          .overlay {
-              display: none;
-              position: fixed;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: rgba(0, 0, 0, 0.5);
-              z-index: 9998;
-          }
-  
-          .popup-image {
-              max-width: 100%;
-              max-height: 100%;
-          }
-      </style>
 
         <div class="wrapper">
           <input type="radio" name="slider" id="tab-1">
@@ -391,15 +360,15 @@
                       <ul class="features">
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 5 Logo Designs</span>
+                              <span>5 Logo Designs</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 3 Social Media Graphics</span>
+                              <span>3 Social Media Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 2 Revisions</span>
+                              <span>2 Revisions</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
@@ -417,19 +386,19 @@
                       <ul class="features">
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 10 Logo Designs</span>
+                              <span>10 Logo Designs</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 10 Social Media Graphics</span>
+                              <span>10 Social Media Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 5 Website Graphics</span>
+                              <span>5 Website Graphics</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
-                              <span>Upto 5 Revisions</span>
+                              <span>5 Revisions</span>
                           </li>
                           <li>
                               <i class="ri-check-line"></i>
@@ -474,26 +443,9 @@
               </div>
           </div>
   
-          <button onclick="showPopup()">Choose plan</button>
-  
-          <!-- Payment Methods Popup -->
-          <div class="overlay" onclick="hidePopup()"></div>
-          <div class="popup-container" id="paymentPopup">
-              <img src="./src/png/logo-name-re.png" alt="Payment Method Image" class="popup-image">
-          </div>
+          <a href="https://wa.link/jimf5q"><button>Choose plan</button></a>
       </div>
   </div>
-  <script>
-    function showPopup() {
-        document.querySelector('.overlay').style.display = 'block';
-        document.querySelector('#paymentPopup').style.display = 'block';
-    }
-
-    function hidePopup() {
-        document.querySelector('.overlay').style.display = 'none';
-        document.querySelector('#paymentPopup').style.display = 'none';
-    }
-</script>
   </section>
 
   <!-- price card sections end -->
