--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
             <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/web.png" alt="css skill" class="tech-stack-logo" />
-              <span class="tooltip">Web Design</span>
+              <span class="tooltip">Website Design</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
@@ -312,12 +312,7 @@
 
             <li class="tech-stack-box" data-aos="fade-up">
               <img src="./src/png/logo-name-re.png" alt="adobe illustrator skill" class="tech-stack-logo" />
-              <span class="tooltip">Brand Identity</span>
-            </li>
-
-            <li class="tech-stack-box" data-aos="fade-up">
-              <img src="./src/png/logo-name-re.png" alt="canva skill" class="tech-stack-logo" />
-              <span class="tooltip">Brand Consultation</span>
+              <span class="tooltip">Brochure Design</span>
             </li>
           </ul>
         </div>
