--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                   <div class="row">
                       <div class="pricing-details">
                           <span>20</span>
-                          <p>For Established Businesses / Agencies</p>
+                          <p>For Personal Use</p>
                       </div>
   
                       <ul class="features">
@@ -405,7 +405,7 @@
                   <div class="row">
                       <div class="pricing-details">
                           <span>30</span>
-                          <p>For team collaboration</p>
+                          <p>For Established Businesses / Agencies</p>
                       </div>
   
                       <ul class="features">
