--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                   <div class="row">
                       <div class="pricing-details">
                           <span>20</span>
-                          <p>For Personal Use</p>
+                          <p>For Experience Once's</p>
                       </div>
   
                       <ul class="features">
