--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       
 
         <p id="info-para" data-aos="fade-up" data-aos-delay="600">
-          "Crafting Creative Solutions: Your Premier Graphic Design io. <br />
+          "Crafting Creative Solutions: Your Premier Graphicon.io <br />
           <br />
           Elevate Your Brand with Stunning Designs. Expertise, Innovation, and Collaboration Define Our Approach. Let's Transform Your Vision into Reality!".
         </p>
