--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <div class="projects-section-div">
         <div class="section-heading" data-aos="fade-up">
           <h2 class="section-heading-article" tabindex="0" aria-label="Select Plan Accordingly">
-            &#60;/Prices&#62;
+            &#60;/Plans&#62;
           </h2>
           <p class="sectionHeadingP"></p>
         </div>
